--- a/style2.css
+++ b/style2.css
@@ -10,11 +10,11 @@ body {
     font-family: Arial, sans-serif;
     font-size: 16px;
     line-height: 1.5;
-    color: #333;
+    color: black;
 }
 
 a {
-    color: #333;
+    color: black;
     text-decoration: none;
 }
 
@@ -69,7 +69,7 @@ p {
 .btn {
     display: inline-block;
     padding: 15px 30px;
-    background-color: #333;
+    background-color: black;
     color: #fff;
     font-size: 18px;
     border-radius: 5px;
@@ -80,10 +80,25 @@ p {
     background-color: #666;
 }
 
-/* Footer styles */
 footer {
-    background-color: #333;
-    color: #fff;
-    padding: 20px;
+    background-color: black;
+    color: white;
     text-align: center;
+    padding: 20px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
+.container {
+    width: 100%;
+    overflow: hidden; /* Це необхідно для коректної роботи float */
+}
+
+img {
+    float: right;
+    max-width: 50%; /* Змініть відповідно до ваших потреб */
+    margin-top: -130px; /* Зсуваємо картинку вгору на 30 пікселів */
+    margin-right: -65px; /* Зсуваємо картинку вправо на 20 пікселів */
+    object-fit: contain;
+}
+
